# haskell-exercises

./: .gitignore  CHANGELOG.md  exercises.cabal
app/: Main.hs
src/file-analytics/: FileAnalytics.hs
src/hello-world/: HelloWorld.hs
src/list-operations/: ListOperations.hs
src/state/: Stack.hs
test/file-analytics/: FileAnalyticsTest.hs
test/hello-world/: HelloWorldTest.hs
test/list-operations/: ListOperationsTest.hs
