cabal-version:      2.4
name:               exercises
version:            0.1.0.0

synopsis: haskell exercises

extra-source-files: CHANGELOG.md

executable exercises
    main-is:          Main.hs

    build-depends:    
        base ^>=4.14.1.0,
        hello-world,
        list-operations
    hs-source-dirs:   app

    default-language: Haskell2010

library hello-world
    exposed-modules:  HelloWorld

    build-depends:    
        base ^>=4.14.1.0
    hs-source-dirs:   src/hello-world

    default-language: Haskell2010

library list-operations
    exposed-modules:  ListOperations

    build-depends:    
        base ^>=4.14.1.0
    hs-source-dirs:   src/list-operations

    default-language: Haskell2010

test-suite hello-world-test
    type: exitcode-stdio-1.0
    main-is: HelloWorldTest.hs

    build-depends:    
        base ^>=4.14.1.0,
        hello-world,
        hspec ==2.7.8
    hs-source-dirs:   test/hello-world

    default-language: Haskell2010

test-suite list-operations-test
    type: exitcode-stdio-1.0
    main-is: ListOperationsTest.hs

    build-depends:    
        base ^>=4.14.1.0,
        list-operations,
        hspec ==2.7.8
    hs-source-dirs:   test/list-operations

    default-language: Haskell2010
